// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DefaultBackground should render children with blur position at bottom on the screen 1`] = `
[
  <View
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "backgroundColor": "#000",
        },
      ]
    }
  />,
  <RNSVGSvgView
    bbHeight={1334}
    bbWidth={750}
    focusable={false}
    height={1334}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 0.1,
          },
        ],
        {
          "flex": 0,
          "height": 1334,
          "width": 750,
        },
      ]
    }
    width={750}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGRadialGradient
          cx="50%"
          cy="50%"
          fx="50%"
          fy="50%"
          gradient={
            [
              0,
              -1,
              1,
              -16777216,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="radGrad"
          rx="50%"
          ry="50%"
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "radGrad",
            "type": 1,
          }
        }
        height={1334}
        propList={
          [
            "fill",
          ]
        }
        width={750}
        x="0%"
        y="33%"
      />
    </RNSVGGroup>
  </RNSVGSvgView>,
  <View
    onLayout={[Function]}
    style={
      [
        {
          "backgroundColor": "#000",
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      scrollEnabled={false}
      showsVerticalScrollIndicator={false}
    >
      <View>
        <RCTSafeAreaView
          style={
            {
              "height": 80,
              "width": 80,
            }
          }
        >
          <Text>
            Background children
          </Text>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>,
]
`;

exports[`DefaultBackground should render children with blur position at center on the screen 1`] = `
[
  <View
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "backgroundColor": "#000",
        },
      ]
    }
  />,
  <RNSVGSvgView
    bbHeight={1334}
    bbWidth={750}
    focusable={false}
    height={1334}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 0.1,
          },
        ],
        {
          "flex": 0,
          "height": 1334,
          "width": 750,
        },
      ]
    }
    width={750}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGRadialGradient
          cx="50%"
          cy="50%"
          fx="50%"
          fy="50%"
          gradient={
            [
              0,
              -1,
              1,
              -16777216,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="radGrad"
          rx="50%"
          ry="50%"
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "radGrad",
            "type": 1,
          }
        }
        height={1334}
        propList={
          [
            "fill",
          ]
        }
        width={750}
        x="0%"
        y="0%"
      />
    </RNSVGGroup>
  </RNSVGSvgView>,
  <View
    onLayout={[Function]}
    style={
      [
        {
          "backgroundColor": "#000",
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      scrollEnabled={false}
      showsVerticalScrollIndicator={false}
    >
      <View>
        <RCTSafeAreaView
          style={
            {
              "height": 80,
              "width": 80,
            }
          }
        >
          <Text>
            Background children
          </Text>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>,
]
`;

exports[`DefaultBackground should render children with blur position at top on the screen 1`] = `
[
  <View
    style={
      [
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        {
          "backgroundColor": "#000",
        },
      ]
    }
  />,
  <RNSVGSvgView
    bbHeight={1334}
    bbWidth={750}
    focusable={false}
    height={1334}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        [
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          },
          {
            "opacity": 0.1,
          },
        ],
        {
          "flex": 0,
          "height": 1334,
          "width": 750,
        },
      ]
    }
    width={750}
  >
    <RNSVGGroup
      fill={
        {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGDefs>
        <RNSVGRadialGradient
          cx="50%"
          cy="50%"
          fx="50%"
          fy="50%"
          gradient={
            [
              0,
              -1,
              1,
              -16777216,
            ]
          }
          gradientTransform={null}
          gradientUnits={0}
          name="radGrad"
          rx="50%"
          ry="50%"
        />
      </RNSVGDefs>
      <RNSVGRect
        fill={
          {
            "brushRef": "radGrad",
            "type": 1,
          }
        }
        height={1334}
        propList={
          [
            "fill",
          ]
        }
        width={750}
        x="0%"
        y="-33%"
      />
    </RNSVGGroup>
  </RNSVGSvgView>,
  <View
    onLayout={[Function]}
    style={
      [
        {
          "backgroundColor": "#000",
          "flex": 1,
        },
        {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        {
          "flexGrow": 1,
        }
      }
      scrollEnabled={false}
      showsVerticalScrollIndicator={false}
    >
      <View>
        <RCTSafeAreaView
          style={
            {
              "height": 80,
              "width": 80,
            }
          }
        >
          <Text>
            Background children
          </Text>
        </RCTSafeAreaView>
      </View>
    </RCTScrollView>
  </View>,
]
`;
